[package]
name = "container-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { version = "0.29", features = ["process", "sched", "mount", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.11"